Refactor Parent and Student modules with exception handling and partial update support - Fully refactored Parent module:   - Added support for Address embedding with validation   - Implemented partial updates using ParentUpdateRequest   - Updated ParentService, ParentServiceImpl, DTOs, and Controller - Applied consistent response structure using ResponseEntity - Updated Student module to fix address handling and updatedBy field mapping - Integrated global exception handler (GlobalExceptionHandler)   - Handles validation errors, runtime errors, generic exceptions   - Added ResourceNotFoundException for 404 consistency - Tested all endpoints via Postman (Parent and Student) – all OK