@@ -5,17 +5,15 @@ import com.noatechsolutions.noaguard.dto.UserResponse;
 import com.noatechsolutions.noaguard.dto.UserUpdateRequest;
 import com.noatechsolutions.noaguard.entity.Role;
 import com.noatechsolutions.noaguard.entity.User;
-import com.noatechsolutions.noaguard.enums.RoleType;
+import com.noatechsolutions.noaguard.exception.ResourceNotFoundException;
 import com.noatechsolutions.noaguard.repository.RoleRepository;
 import com.noatechsolutions.noaguard.repository.UserRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -32,166 +30,91 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserResponse createUser(UserRequest request) {
-        if (userRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("Email already in use");
-        }
-
-        Role role = roleRepository.findByName(request.getRole())
-                .orElseThrow(() -> new RuntimeException("Role not found: " + request.getRole()));
-
         User user = new User();
         user.setEmail(request.getEmail());
         user.setPassword(passwordEncoder.encode(request.getPassword()));
         user.setFirstName(request.getFirstName());
         user.setLastName(request.getLastName());
         user.setNickname(request.getNickname());
-        user.setActive(true);
+        user.setActive(request.getActive() != null ? request.getActive() : true);
         user.setCreatedAt(LocalDateTime.now());
         user.setUpdatedAt(LocalDateTime.now());
-        user.setRoles(List.of(role));
+
+        if (request.getRoleIds() != null && !request.getRoleIds().isEmpty()) {
+            List<Role> roles = roleRepository.findAllById(request.getRoleIds());
+            if (roles.size() != request.getRoleIds().size()) {
+                throw new ResourceNotFoundException("One or more roles not found by given IDs");
+            }
+            user.setRoles(roles);
+        }
 
         userRepository.save(user);
-
-        return new UserResponse(
-                user.getId(),
-                user.getEmail(),
-                user.getFirstName(),
-                user.getLastName(),
-                user.getNickname(),
-                user.getRoles().stream().map(r -> r.getName().name()).toList(),
-                user.isActive()
-        );
+        return toResponse(user);
     }
 
     @Override
-    public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
-                .map(user -> new UserResponse(
-                        user.getId(),
-                        user.getEmail(),
-                        user.getFirstName(),
-                        user.getLastName(),
-                        user.getNickname(),
-                        user.getRoles().stream().map(r -> r.getName().name()).toList(),
-                        user.isActive()
-                ))
-                .toList();
+    public UserResponse updateUser(Long id, UserUpdateRequest request) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id " + id));
+
+        if (request.getEmail() != null) user.setEmail(request.getEmail());
+        if (request.getPassword() != null) user.setPassword(passwordEncoder.encode(request.getPassword()));
+        if (request.getFirstName() != null) user.setFirstName(request.getFirstName());
+        if (request.getLastName() != null) user.setLastName(request.getLastName());
+        if (request.getNickname() != null) user.setNickname(request.getNickname());
+        if (request.getActive() != null) user.setActive(request.getActive());
+
+        if (request.getRoleIds() != null) {
+            List<Role> roles = roleRepository.findAllById(request.getRoleIds());
+            if (roles.size() != request.getRoleIds().size()) {
+                throw new ResourceNotFoundException("One or more roles not found by given IDs");
+            }
+            user.setRoles(roles);
+        }
+
+        user.setUpdatedAt(LocalDateTime.now());
+        userRepository.save(user);
+        return toResponse(user);
     }
 
     @Override
     public UserResponse getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id " + id));
-        return new UserResponse(
-                user.getId(),
-                user.getEmail(),
-                user.getFirstName(),
-                user.getLastName(),
-                user.getNickname(),
-                user.getRoles().stream().map(r -> r.getName().name()).toList(),
-                user.isActive()
-        );
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id " + id));
+        return toResponse(user);
     }
 
     @Override
-    public UserResponse updateUser(Long userId, UserUpdateRequest request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-
-        if (request.getEmail() != null && !request.getEmail().equals(user.getEmail())) {
-            if (userRepository.existsByEmail(request.getEmail())) {
-                throw new RuntimeException("Email already in use");
-            }
-            user.setEmail(request.getEmail());
-        }
-
-        if (request.getPassword() != null && !request.getPassword().isEmpty()) {
-            user.setPassword(passwordEncoder.encode(request.getPassword()));
-        }
-
-        if (request.getFirstName() != null) {
-            user.setFirstName(request.getFirstName());
-        }
-
-        if (request.getLastName() != null) {
-            user.setLastName(request.getLastName());
-        }
-
-        if (request.getNickname() != null) {
-            user.setNickname(request.getNickname());
-        }
-
-        if (request.getRole() != null) {
-            Role role = roleRepository.findByName(request.getRole())
-                    .orElseThrow(() -> new RuntimeException("Role not found: " + request.getRole()));
-            user.setRoles(new ArrayList<>(List.of(role)));
-        }
-
-        user.setUpdatedAt(LocalDateTime.now());
-        userRepository.save(user);
-
-        return new UserResponse(
-                user.getId(),
-                user.getEmail(),
-                user.getFirstName(),
-                user.getLastName(),
-                user.getNickname(),
-                user.getRoles().stream().map(r -> r.getName().name()).toList(),
-                user.isActive()
-        );
+    public List<UserResponse> getAllUsers() {
+        return userRepository.findAll().stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteUser(Long id) {
         if (!userRepository.existsById(id)) {
-            throw new RuntimeException("User not found with id " + id);
+            throw new ResourceNotFoundException("User not found with id " + id);
         }
         userRepository.deleteById(id);
     }
 
-    @Override
-    public Page<UserResponse> getUsers(String search, RoleType role, Pageable pageable) {
-        Page<User> users;
-
-        if (search != null && !search.isBlank() && role != null) {
-            users = userRepository.findBySearchAndRole(search.toLowerCase(), role.name(), pageable);
-        } else if (search != null && !search.isBlank()) {
-            users = userRepository.findBySearch(search.toLowerCase(), pageable);
-        } else if (role != null) {
-            users = userRepository.findByRole(role.name(), pageable);
-        } else {
-            users = userRepository.findAll(pageable);
-        }
-
-        return users.map(user -> new UserResponse(
-                user.getId(),
-                user.getEmail(),
-                user.getFirstName(),
-                user.getLastName(),
-                user.getNickname(),
-                user.getRoles().stream().map(r -> r.getName().name()).toList(),
-                user.isActive()
-        ));
-    }
-
-    @Override
-    public UserResponse toggleUserActive(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-
-        user.setActive(user.getActive() == null ? Boolean.TRUE : !user.getActive());
-        user.setUpdatedAt(LocalDateTime.now());
-        userRepository.save(user);
-
+    // Método privado para mapear entidad User a UserResponse
+    private UserResponse toResponse(User user) {
         UserResponse response = new UserResponse();
         response.setId(user.getId());
         response.setEmail(user.getEmail());
         response.setFirstName(user.getFirstName());
         response.setLastName(user.getLastName());
         response.setNickname(user.getNickname());
-        response.setRoles(user.getRoles().stream().map(r -> r.getName().name()).toList());
-        response.setActive(user.getActive() != null && user.getActive());
-
+        response.setActive(user.getActive());
+        response.setCreatedAt(user.getCreatedAt());
+        response.setUpdatedAt(user.getUpdatedAt());
+        // Solo los IDs de roles
+        List<Long> roleIds = user.getRoles().stream()
+                .map(Role::getId)
+                .collect(Collectors.toList());
+        response.setRoleIds(roleIds);
         return response;
     }
 }
